--- a/subscribe.html
+++ b/subscribe.html
@@ -13,12 +13,12 @@
         <header>
 
         	<div id="logo">
-            <a href=""><img src="images/logo.jpg" alt="Logo"/></a>
+            <a href="index.html"><img src="images/logo.jpg" alt="Logo"/></a>
             </div><!--close logo-->
 
             <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li><a href="subscribe.html">Subscribe</a></li>
             </ul>
