--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <header>
 
         	<div id="logo">
-            <a href="/"><img src="images/logo.jpg" alt="Logo"/></a>
+            <a href=""><img src="images/logo.jpg" alt="Logo"/></a>
             </div><!--close logo-->
 
             <nav>
